--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
       <h1>Introduction</h1>
       <p>Details here...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Poughkeepsie, NY.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include golfing and playing with my golden retriever Jax.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to one day be a software developer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I currently reside in Danbury, CT with my wife and two doggos.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love to create things and see my work go from an idea to a finished product.</p>
     </section>
 
     <footer id="footer">
